fix bugs with overflow

--- a/style (копия).css
+++ b/style (копия).css
@@ -1,5 +1,6 @@
 body {
 	font: normal .8em montserrat;
+	min-width: 1170px;
 	margin: 0 auto;
 }
 
@@ -23,11 +24,13 @@ body {
 }
 
 .header {
-	display: flex;
 	align-items: center;
-	max-width: 1030px;
-	margin: 0 auto 5px;
+	display: flex;
 	height: 100px;
+	margin: 0 auto 5px;
+	width: 1030px;
+/*	max-width: 1030px;
+	min-width: 931px;*/
 	padding-top: 10px;
 	position: relative;
 }
@@ -64,7 +67,7 @@ body {
 	display: none;
 	height: 26px;
 	position: absolute;
-	right: 44px;
+	right: 1px;
 	top: 46px;
 	width: 61px;
 }
@@ -73,6 +76,7 @@ body {
 	height: 9px;
 	width: 61px;
 	background: #000;
+	top: 0px;
 	position: absolute;
 }
 
@@ -91,8 +95,8 @@ body {
 
 .search::after {
 	content: '';
+	background-size: cover;
 	background: url(img/search.svg);
-  background-size: cover;
 	bottom: 6px;
 	height: 14px;
 	position: absolute;
@@ -154,11 +158,14 @@ body {
 
 .banner {
 	background: url(img/banner-img.png) no-repeat;
+	background-color: red;
 	background-size: cover;
-	min-height: 281px;
+	height: 281px;
 	margin: auto;
-	max-width: 1030px;
 	position: relative;
+	/*width: 2000px;*/
+	max-width: 1030px;
+	/*min-width: 931px;*/
 }
 
 .banner__title {
@@ -181,12 +188,15 @@ body {
 
 /* media querys: */
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) and (max-width: 1169px) {
+
+	body {
+		/*max-width: 1169px;
+		min-width: 1024px;*/
+	}
 
 	.header {
-		padding-top: 2px;
-		max-width: 930px;
-		min-width: 768px;
+		/*max-width: 930px;*/
 		margin-bottom: 18px;
 	}
 
@@ -237,11 +247,11 @@ body {
 	}
 
 	.banner {
-		background-size: contain;
-		background-position: 10px;
-		min-height: 254px;
-		max-width: 950px;
-		min-width: 768px;
+		/*background-size: contain;*/
+	background-color: red;
+
+		/*max-width: 930px;*/
+		/*min-width: 768px;*/
 	}
 
 	.banner__title {
@@ -258,9 +268,13 @@ body {
 
 @media (max-width: 768px) {
 
+	body {
+		/*max-width: 768px;
+		min-width: 376px;*/
+	}
+
 	.header {
-		max-width: 768px;
-		min-width: 375px;
+		/*max-width: 682px;*/
 		margin-bottom: 4px;
 		padding-top: 8px;
 	}
@@ -273,7 +287,7 @@ body {
 	}
 
 	.header__logo {
-		width: 242px;
+		width: 157px;
 	}
 
 	.logo {
@@ -298,10 +312,8 @@ body {
 
 	.banner {
 		background-size: cover;
-		background-position: -128px;
-		min-height: 417px;
-		max-width: 768px;
-		min-width: 375px;
+		background-position: -126px;
+		min-height: 416px;
 	}
 
 	.banner__title {
@@ -322,9 +334,13 @@ body {
 
 @media (max-width: 375px) {
 
+	body {
+	/*	max-width: 375px;
+		min-width: 321px;*/
+	}
+
 	.header {
-		max-width: 375px;
-		min-width: 320px;
+		/*max-width: 375px;*/
 		margin-bottom: 3px;
 		padding-top: 1px;
 		height: 67px;
@@ -364,10 +380,10 @@ body {
 
 	.banner {
 		background-position: -63px;
-		background-size: cover;
-		max-width: 375px;
-		min-width: 320px;
-		min-height: 192px;
+		max-height: 192px;
+		/*max-width: 375px;*/
+		/*min-width: 375px;*/
+		min-height: 50px;
 	}
 
 	.banner__title {
@@ -389,8 +405,13 @@ body {
 
 @media (max-width: 320px) {
 
-	.header {
+	body {
 		max-width: 320px;
+		min-width: 320px;
+	}
+
+	.header {
+		/*max-width: 320px;*/
 		margin-bottom: 3px;
 		padding-top: 1px;
 		height: 67px;
@@ -414,7 +435,8 @@ body {
 
 	.banner {
 		background-position: -91px;
-		max-width: 320px;
+		/*max-width: 320px;*/
+		/*min-width: 273px;*/
 	}
 
 	.banner__title {
